<?xml version="1.0" encoding="UTF-8"?>
<!--
    JBoss, Home of Professional Open Source
    Copyright 2015, Red Hat, Inc. and/or its affiliates, and individual
    contributors by the @authors tag. See the copyright.txt in the
    distribution for a full listing of individual contributors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
        <relativePath/>
    </parent>
    <artifactId>kitchensink</artifactId>
    <version>1.0.0.RELEASE</version>
    <packaging>war</packaging>
    <name>Quickstart: kitchensink</name>
    <description>A starter Jakarta EE web application (modified for use with Spring Boot, Java 21, and MongoDB)</description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>21</java.version>

        <version.spring.core>6.1.12</version.spring.core>
        <version.spring.boot>3.3.2</version.spring.boot>
        <version.spring.boot.test>3.3.1</version.spring.boot.test>
        <version.spring.boot.data.mongodb>4.3.2</version.spring.boot.data.mongodb>
        <version.mongodb.driver>5.1.1</version.mongodb.driver>
        <version.joinfaces>5.3.1</version.joinfaces>
        <version.testcontainers>1.20.0</version.testcontainers>
        <version.slf4j.simple>2.0.13</version.slf4j.simple>

        <version.jakarta.enterprise.cdi>4.1.0</version.jakarta.enterprise.cdi>
        <version.jakarta.validation>3.1.0</version.jakarta.validation>
        <version.jakarta.annotation>3.0.0</version.jakarta.annotation>
        <version.jakarta.ejb>4.0.1</version.jakarta.ejb>
        <version.jakarta.faces>4.1.0</version.jakarta.faces>
        <version.jakarta.xml.bind>4.0.2</version.jakarta.xml.bind>
        <version.jakarta.json>2.1.3</version.jakarta.json>
        <version.junit>4.13.2</version.junit>
        <version.eclipse.parsson>1.1.2.redhat-00001</version.eclipse.parsson>

        <version.surefire.maven.plugin>3.3.1</version.surefire.maven.plugin>
        <version.failsafe.maven.plugin>3.3.1</version.failsafe.maven.plugin>
        <version.wildfly.maven.plugin>5.0.0.Final</version.wildfly.maven.plugin>
        <version.compiler.maven.plugin>3.11.0</version.compiler.maven.plugin>
        <version.server.bom>8.0.0.GA-redhat-00009</version.server.bom>
    </properties>

    <repositories>
        <repository>
            <id>redhat-ga-maven-repository</id>
            <name>Red Hat GA Maven Repository</name>
            <url>https://maven.repository.redhat.com/ga/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
            <layout>default</layout>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>redhat-ga-maven-repository</id>
            <name>Red Hat GA Maven Repository</name>
            <url>https://maven.repository.redhat.com/ga/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.compiler.maven.plugin}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <testSource>${java.version}</testSource>
                    <testTarget>${java.version}</testTarget>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${version.failsafe.maven.plugin}</version>
                <configuration>
                    <includes>
                        <include>**/RemoteMemberRegistrationIT</include>
                        <include>**/MemberRegistrationIT</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>verify</goal>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.surefire.maven.plugin}</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>${version.wildfly.maven.plugin}</version>
<!--                <configuration>-->
<!--                    <hostname>example.host</hostname>-->
<!--                    <port>9990</port>-->
<!--                    <username>user</username>-->
<!--                    <password>passwd</password>-->
<!--                </configuration>-->
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- Post-migration dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${version.spring.boot}</version>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-mongodb</artifactId>
            <version>${version.spring.boot.data.mongodb}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <version>${version.spring.boot}</version>
        </dependency>

        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>${version.mongodb.driver}</version>
        </dependency>

        <dependency>
            <groupId>org.joinfaces</groupId>
            <artifactId>faces-spring-boot-starter</artifactId>
            <version>${version.joinfaces}</version>
            <exclusions>
                <!-- Not needed when not running on JBoss EAP/Wildfly (e.g., simple Tomcat server) -->
                <exclusion>
                    <groupId>org.jboss.weld.servlet</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${version.spring.boot.test}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mongodb</artifactId>
            <version>${version.testcontainers}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${version.testcontainers}</version>
            <scope>test</scope>
        </dependency>

        <!-- Eliminates error when running Spring JUnit tests -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${version.slf4j.simple}</version>
            <scope>test</scope>
        </dependency>

        <!-- Pre-migration dependencies -->

        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
            <version>${version.jakarta.enterprise.cdi}</version>
        </dependency>

        <!-- Needed for running tests (you may also use TestNG) -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.ejb</groupId>
            <artifactId>jakarta.ejb-api</artifactId>
            <version>${version.jakarta.ejb}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.faces</groupId>
            <artifactId>jakarta.faces-api</artifactId>
            <version>${version.jakarta.faces}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>${version.jakarta.xml.bind}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>${version.jakarta.json}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.parsson</groupId>
            <artifactId>parsson</artifactId>
            <version>${version.eclipse.parsson}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
